--- a/packages/group-hug-react/index.html
+++ b/packages/group-hug-react/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Component</title>
-  </head>
-  <body>
-    <div id="app"></div>
 
-    <script type="module" src="./GroupHug.stories.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Test GroupHug</title>
+</head>
+
+<body>
+  <div id="app"></div>
+
+  <script type="module" src="test.tsx"></script>
+</body>
+
 </html>
