--- a/packages/group-hug-react/index.html
+++ b/packages/group-hug-react/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GroupHug</title>
+    <title>GroupHug Tester</title>
 </head>
 
 <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="./test.tsx"></script>
 </body>
 
 </html>
